# UnoAlpha

./: .gitignore  CMakeLists.txt  README.md  unogame-CPP.sln  unogame-CPP.vcxproj  unogame-CPP.vcxproj.filters
UnoAlpha/: Project1.vcxproj  UnoAlpha.sln
UnoAlpha/src/: main.cpp
include/: card.h  deck.h  game.h  gameState.h  player.h  unoSource.h
src/: button.cpp  card.cpp  deck.cpp  game.cpp  main.cpp  player.cpp  unoSource.cpp
unoCPP/include/: header.h
unoCPP/src/: main.cpp
x64/Debug/: game.nativecodeanalysis.sarif  game.nativecodeanalysis.xml  game.obj.enc  unogame-CPP.exe.recipe  unogame-CPP.ilk  vc.nativecodeanalysis.all.xml  vc143.idb
x64/Debug/unogame-CPP.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  unogame-CPP.lastbuildstate
